# sl_say

./: .gitignore  README.md  pyproject.toml  sl_say.spec  version_info.txt
.github/workflows/: release.yml
app/: audio_player.py  chat_parser.py  config_store.py  file_watcher.py  filter_config.py  icon.icns  main.py  path_resolver.py  startup_form.py  tts_engine.py  tts_queue.py
tests/: test_audio_player.py  test_chat_parser.py  test_config_store.py  test_file_watcher.py  test_filter_config.py  test_main.py  test_path_resolver.py  test_startup_form.py  test_tts_engine.py  test_tts_queue.py
