[project]
name = "sl-say"
version = "0.1.0"
description = "Firestorm chat.txt watcher with TTS readout (Windows)"
requires-python = ">=3.10"
dependencies = [
    "edge-tts",
]

[dependency-groups]
dev = [
    "pyinstaller",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
